<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#459BFF"
        android:orientation="horizontal"
        android:padding="10dp"
        android:id="@+id/displayProfile">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/user_s_avatar_content_description"
            android:id="@+id/icon_img"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="0dp">
        <TextView
            android:id="@+id/settings_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:text="@string/display_name"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/settings_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:text="@string/u_username" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5">
        <TextView
            android:id="@+id/user_settings_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/user_settings"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/display_language_text_view"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/display_language_text"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/selected_language_text_view"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/selected_language_text"
            android:textAlignment="textEnd" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/allow_follower_text_view"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/allow_follower_text"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/allow_follower_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:layout_weight="0" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/nsfw_text_view"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/nsfw_text"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/nsfw_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:layout_weight="0" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hide_ads_text_view"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/hide_ads_text"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/hide_ads_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:layout_weight="0" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/active_in_communities_text_view"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/active_in_communities_text"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/active_in_communities_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:layout_weight="0" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/autoplay_videos_text_view"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/autoplay_videos_text"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/autoplay_videos_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:layout_weight="0" />
    </LinearLayout>

</LinearLayout>