<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFE2C8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#459BFF"
        android:orientation="horizontal"
        android:padding="10dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/user_s_avatar_content_description" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="0dp">
            <TextView
                android:id="@+id/settings_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:text="@string/display_name"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/settings_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:text="@string/u_username" />
        </LinearLayout>

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:src="@drawable/settings" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B5B5B5">
        <TextView
            android:id="@+id/user_profile_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/user_profile_description_text"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

</LinearLayout>